Temporary fix for events page spacing

--- a/rpi-eventhub/frontend/src/pages/Events/AllEventPage/AllEvents.module.css
+++ b/rpi-eventhub/frontend/src/pages/Events/AllEventPage/AllEvents.module.css
@@ -20,7 +20,7 @@
 .myMasonryGrid {
     display: flex;
     margin-left: -15px;
-    width: auto;
+    width: 80%;
 }
 
 .myMasonryGridColumn {
